{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 78,
  "lineage": "348aaf05-208f-299c-6144-dcce277f8252",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "tcw_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:638353384455:security-group/sg-0c0ee2f0fe504fd64",
            "description": "Allow all inbound traffic",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "tcw_security_group"
                ]
              }
            ],
            "id": "sg-0c0ee2f0fe504fd64",
            "name": "tcw_security_group",
            "tags": {
              "Name": "tcw_security_group"
            },
            "vpc_id": "vpc-034ea44a189e369e9"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc_available",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:638353384455:vpc/vpc-034ea44a189e369e9",
            "cidr_block": "192.168.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-05fc9253504d8bb0b",
                "cidr_block": "192.168.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-05101273df7374a25",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "tcw_vpc"
                ]
              }
            ],
            "id": "vpc-034ea44a189e369e9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0821853b2cac5f10e",
            "owner_id": "638353384455",
            "tags": {
              "Name": "tcw_vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "tcw_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:638353384455:loadbalancer/app/tcw-alb/43e3dc49a9aeac1c",
            "arn_suffix": "app/tcw-alb/43e3dc49a9aeac1c",
            "desync_mitigation_mode": "defensive",
            "dns_name": "tcw-alb-331260455.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:638353384455:loadbalancer/app/tcw-alb/43e3dc49a9aeac1c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tcw-alb",
            "security_groups": [
              "sg-0c0ee2f0fe504fd64"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0332318929cc726df"
              },
              {
                "subnet_id": "subnet-0fb889b0d9f74564c"
              }
            ],
            "subnets": [
              "subnet-0332318929cc726df",
              "subnet-0fb889b0d9f74564c"
            ],
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            },
            "vpc_id": "vpc-034ea44a189e369e9",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "data.aws_security_group.tcw_sg",
            "data.aws_subnet_ids.available_db_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_forward_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:638353384455:listener/app/tcw-alb/43e3dc49a9aeac1c/325db3e9c5155b71",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:638353384455:targetgroup/tcw-tg/bbc717a6db17d91e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:638353384455:listener/app/tcw-alb/43e3dc49a9aeac1c/325db3e9c5155b71",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:638353384455:loadbalancer/app/tcw-alb/43e3dc49a9aeac1c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.tcw_alb",
            "aws_lb_target_group.tcw_tg",
            "data.aws_security_group.tcw_sg",
            "data.aws_subnet_ids.available_db_subnet",
            "data.aws_vpc.vpc_available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tcw_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:638353384455:targetgroup/tcw-tg/bbc717a6db17d91e",
            "arn_suffix": "targetgroup/tcw-tg/bbc717a6db17d91e",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:638353384455:targetgroup/tcw-tg/bbc717a6db17d91e",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tcw-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-034ea44a189e369e9"
          },
          "dependencies": [
            "data.aws_vpc.vpc_available"
          ]
        }
      ]
    }
  ]
}